cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_242.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:142: error: NULL_DEREFERENCE
  pointer `ex_data` last assigned on line 117 could be null and is dereferenced at line 142, column 9.
Showing all 8 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:114:1: start of procedure select_server_ctx()
112.    * An empty SNI extension also returns SSL_TSLEXT_ERR_NOACK.
113.    */
114. > static int select_server_ctx(SSL *s, void *arg, int ignore)
115.   {
116.       const char *servername = SSL_get_servername(s, TLSEXT_NAMETYPE_host_name);

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:116:5: 
114.   static int select_server_ctx(SSL *s, void *arg, int ignore)
115.   {
116. >     const char *servername = SSL_get_servername(s, TLSEXT_NAMETYPE_host_name);
117.       HANDSHAKE_EX_DATA *ex_data =
118.           (HANDSHAKE_EX_DATA*)(SSL_get_ex_data(s, ex_data_idx));

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:117:5: 
115.   {
116.       const char *servername = SSL_get_servername(s, TLSEXT_NAMETYPE_host_name);
117. >     HANDSHAKE_EX_DATA *ex_data =
118.           (HANDSHAKE_EX_DATA*)(SSL_get_ex_data(s, ex_data_idx));
119.   

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:120:9: Taking false branch
118.           (HANDSHAKE_EX_DATA*)(SSL_get_ex_data(s, ex_data_idx));
119.   
120.       if (servername == NULL) {
               ^
121.           ex_data->servername = SSL_TEST_SERVERNAME_SERVER1;
122.           return SSL_TLSEXT_ERR_NOACK;

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:125:9: Taking false branch
123.       }
124.   
125.       if (strcmp(servername, "server2") == 0) {
               ^
126.           SSL_CTX *new_ctx = (SSL_CTX*)arg;
127.           SSL_set_SSL_CTX(s, new_ctx);

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:138:16: Taking false branch
136.           ex_data->servername = SSL_TEST_SERVERNAME_SERVER2;
137.           return SSL_TLSEXT_ERR_OK;
138.       } else if (strcmp(servername, "server1") == 0) {
                      ^
139.           ex_data->servername = SSL_TEST_SERVERNAME_SERVER1;
140.           return SSL_TLSEXT_ERR_OK;

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:141:16: Taking true branch
139.           ex_data->servername = SSL_TEST_SERVERNAME_SERVER1;
140.           return SSL_TLSEXT_ERR_OK;
141.       } else if (ignore) {
                      ^
142.           ex_data->servername = SSL_TEST_SERVERNAME_SERVER1;
143.           return SSL_TLSEXT_ERR_NOACK;

/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/handshake_helper.c:142:9: 
140.           return SSL_TLSEXT_ERR_OK;
141.       } else if (ignore) {
142. >         ex_data->servername = SSL_TEST_SERVERNAME_SERVER1;
143.           return SSL_TLSEXT_ERR_NOACK;
144.       } else {
